# DjangoCRUDCreator

./: README.md  pyproject.toml
creator/: test.py
creator/docs/: db_types.md  models.py
creator/references/: db_column.py  db_ref.py  models.py  serializers.py  soft_delete.py
